--- a/documentation/requirements.txt
+++ b/documentation/requirements.txt
@@ -1,5 +1,7 @@
+accessible-pygments==0.0.3
 alabaster==0.7.13
 Babel==2.11.0
+beautifulsoup4==4.11.2
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
@@ -10,13 +12,15 @@ importlib-metadata==6.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
+pydata-sphinx-theme==0.13.0
 Pygments==2.14.0
 pytz==2022.7.1
 requests==2.28.2
 snowballstemmer==2.2.0
+soupsieve==2.4
 sphinx==6.1.3
+sphinx-book-theme==1.0.0
 sphinx-intl==2.1.0
-sphinx-rtd-theme==0.5.1
 sphinxcontrib-applehelp==1.0.4
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.1
